--- a/src/app/main/contact/contact.html
+++ b/src/app/main/contact/contact.html
@@ -1,1 +1,10 @@
-<p>contact works!</p>
+<section class="contact-section">
+    <div class="contact-container">
+        <div class="contact-left">
+            <app-contact-info />
+        </div>
+        <div class="contact-right">
+            <app-contact-form />
+        </div>
+    </div>
+</section>
